# WiSenseHub

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
catalog/: adapters.json  downloads.json  examples.json  splits.json  tasks.json
catalog/datasets/: aril.json  csi-bench.json  csida.json  ehunam.json  exposing-csi.json  figshare-csi-har.json  glasgow-activity-localization.json  glasgow-multiuser.json  mm-fi.json  nist-breathesmart.json  ntu-fi.json  operanet.json  signfi.json  ut-har.json  wallhack18k.json  wiar.json  widar3.json  wifi-80mhz.json  wifi-presence-movement.json  wifi-tad.json  wimans.json  wipe-fall.json  wireless-har-wifi-uwb.json  xrf-v2.json  xrf55.json
docs/: adapters.md  csi-bench-style-comparison.md  csi-bench-style-comparison.tsv  curation-policy.md  dataset-selection.md  dataset-statistics.csv  dataset-statistics.md  known-limitations.md  reproducibility.md  splits.md  standard.md
docs/datasets/: aril.md  ut-har.md  wallhack18k.md  xrf-v2.md
docs/verification/: nist-breathesmart.md  ut-har.md  wifi-presence-movement.md
examples/: make_synthetic_input.py  tad-segments.json
schemas/: dataset.schema.json  standardized-metadata.schema.json
scripts/: build_local_previews.py  build_previews.py  build_sample_manifest.py  build_site_data.py  fetch_samples.py
site/: dataset.html  example.html  index.html  notebook.html  tutorial.html
site/assets/: app.js  dataset.js  example.js  notebook.js  style.css
src/wifi_datahub/: __init__.py  (+11 more)
tests/: test_catalog.py  test_standardize.py
(+31 files in other folders)
