[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wisensehub"
version = "0.5.0"
description = "Catalog and standardization tools for public WiFi sensing datasets"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
dev = ["jsonschema>=4.18", "scipy>=1.10"]
data = ["scipy>=1.10", "h5py>=3.9", "zarr>=2.16"]

[project.scripts]
wisensehub = "wifi_datahub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
